# terrain-gen

./: .gitignore  2048x2048  CMakeLists.txt  Makefile  OldMakefile  README  README.md  README.txt  cmake_install.cmake  simple_map.txt  trender  trender-adv  trender-basic  trender-small
cmake/: FindSDL2.cmake  FindSDL2_Image.cmake  FindSDL2_ttf.cmake
data/: Entities - Actors.csv  Entities - Buildings.csv  Entities - Plants.csv  Formulas - Buildings.csv  Formulas - Items.csv  Items - Animal Products.csv  Items - Manufactured Products.csv  Items - Produce.csv  Items - Raw Materials.csv
include/fast-cpp-csv-parser/: csv.h
include/fft/: fft.h
src/: .dir-locals.el  Perlin.cpp  Perlin.hpp  TrGame.cpp  TrGame.hpp  TrGraphics-impl.hpp  TrGraphics.cpp  TrGraphics.hpp  TrRenderer.cpp  TrRenderer.hpp  Utils.cpp  Utils.hpp  athena.cpp  fft.cpp  trender.cpp
src/TrData/: TrData.cpp  TrData.hpp
src/TrECS/: MyEntities.hpp  TrBuildingEntity.hpp  TrBuildingFootprintComponent.cpp  TrBuildingFootprintComponent.hpp  TrBuildingGraphicsComponent.cpp  TrBuildingGraphicsComponent.hpp  TrComponents.hpp  TrEntities.hpp  TrEntityFactory.cpp  TrEntityFactory.hpp  TrEntityTypes.cpp  TrEntityTypes.hpp
src/TrECS/TrComponents/: TrActionComponent.hpp  TrBuildingGraphicsComponent.cpp  TrBuildingGraphicsComponent.hpp  TrFootprintComponent.cpp  TrFootprintComponent.hpp  TrGraphicsComponent.cpp  TrGraphicsComponent.hpp  TrPhysicsComponent.cpp  TrPhysicsComponent.hpp  TrPlanningComponent.cpp  TrPlanningComponent.hpp
src/TrECS/TrEntities/: TrActorEntity.cpp  TrActorEntity.hpp  TrBuildingEntity.cpp  (+3 more)
src/TrGUI/: TrGUIButton.cpp  TrGUIButton.hpp  TrGUIDropdownMenu.cpp  TrGUIDropdownMenu.hpp  TrGUIEntity.cpp  TrGUIEntity.hpp  TrGUIMenu.cpp  TrGUIMenu.hpp  TrGUIObject.hpp
src/TrMap/: TrColorMap.cpp  TrColorMap.hpp  TrHeightMap.cpp  TrHeightMap.hpp  TrMap.cpp  TrMap.hpp  TrMapData.cpp  TrMapData.hpp  TrMapDataUtils.cpp  TrMapDataUtils.hpp  TrMoistureMap.cpp  TrMoistureMap.hpp  TrNormalMap.cpp  TrNormalMap.hpp  TrVegetationMap.cpp  TrVegetationMap.hpp  TrWaterMap.cpp  TrWaterMap.hpp  TrWindMap.cpp  TrWindMap.hpp
src/TrRenderLoop/: TrGameLoop.cpp  TrGameLoop.hpp  TrMainMenuLoop.cpp  TrMainMenuLoop.hpp  TrRenderLoop.cpp  TrRenderLoop.hpp  TrTransitionLoop.cpp  TrTransitionLoop.hpp
src/TrUtils/: TrMath.cpp  TrMath.hpp  TrQuadTree.hpp  TrSimulation.cpp  TrSimulation.hpp
(+31 files in other folders)
